--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "majiasheng",
   "version": "0.1.0",
-  "homepage": "https://majiasheng.github.io/majiasheng-react",
+  "homepage": "https://majiasheng.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
@@ -14,8 +14,8 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-   "predeploy": "npm run build",
-   "deploy": "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
