--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": ["airbnb", "airbnb/hooks"],
   "rules": {
+    "import/prefer-default-export": "warn",
     "no-trailing-spaces": "warn",
     "react/jsx-filename-extension": "off"
   }
