--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.8.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.3.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1"
   },
